<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app">Electronic Montreal Cognitive Assessment</string>
    <string name="app_name">eMOCA</string>
    <string name="gotonext">Next Test Question</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="exportDialog1">Please enter your name.</string>
    <string name="exportDialogError">Error: Name is a required.</string>
    <string name="emoca">eMOCA</string>
    <string name="startMoca">START NEW\nASSESSMENT</string>
    <string name="export">EXPORT DATA</string>
    <string name="save_exit">Save &amp; Exit</string>
    <string name="exit">EXIT</string>
    <string name="input_scoring">INSERT SCORE DATA</string>
    <string name="tap">Tap Here</string>
    <string name="replay">Replay Instructions</string>
    <string name="cube_label">Draw Cube</string>
    <string name="clock_hands_label">Draw Clock (Ten past Eleven)</string>
    <string name="cat1">Part of the Body</string>
    <string name="cat2">Type of Fabric</string>
    <string name="cat3">Type of Building</string>
    <string name="cat4">Type of Flower</string>
    <string name="cat5">A Colour</string>
    <string name="mcq1_1">Nose</string>
    <string name="mcq1_2">Face</string>
    <string name="mcq1_3">Hand</string>
    <string name="mcq2_1">Denim</string>
    <string name="mcq2_2">Cotton</string>
    <string name="mcq2_3">Velvet</string>
    <string name="mcq3_1">Church</string>
    <string name="mcq3_2">School</string>
    <string name="mcq3_3">Hospital</string>
    <string name="mcq4_1">Rose</string>
    <string name="mcq4_2">Daisy</string>
    <string name="mcq4_3">Tulip</string>
    <string name="mcq5_1">Red</string>
    <string name="mcq5_2">Green</string>
    <string name="mcq5_3">Blue</string>
    <string name="start_label">Start Test</string>
    <string name="next_label">Go to Next Screen</string>
    <string name="survey_id_label">Test Survey ID :</string>
    <string name="admin_emoca_label">Please hand the tablet to the patient so that they may take the Electronic Montreal Cognitive Assessment test after pressing the start button below.</string>
    <string name="end_emoca_label">The test is now complete. Please hand the tablet back to the researcher. We appreciate your participation in this study.</string>
    <string name="when_ready">Please Speak When Ready</string>
    <string name="cancel_end_emoca_label">All data for the test has been deleted. Please hand the tablet back to the researcher. We appreciate your participation in this study.</string>
    <string name="emoca_intro">Welcome to the Electronic Montreal Cognitive Assessment.</string>
    <string name="welcome1">You will be taught how to use the tablet and stylus before you begin the test. If you have any questions about the operation of the tablet, please ask the researcher for help before continuing.</string>
    <string name="welcome2">Grey buttons on the screen respond to your touch or the stylus.</string>
    <string name="welcome3">Press the grey button in the top-right with your finger or stylus to go to the next screen.</string>
    <string name="emoca_label">Electronic Montreal Cognitive Assessment</string>
    <string name="inst_label">Instructions</string>
    <string name="emoca_inst1">Some questions will ask you to speak an answer. The words \"Please Speak When Ready\" will appear on screen indicating that the microphone is on and recording. Please speak clearly towards the tablet when ready with an answer.</string>
    <string name="emoca_inst2">Some questions will ask you to draw. Below is a grey area similar to what you will see during parts of the test. Please practice using the stylus by writing in the grey area. The Clear button will clear your writing should you need more practice, it will not be present during the test.</string>
    <string name="emoca_inst3">On all questions of this test there is a button in the upper-left corner that allows you to repeat the instructions once if needed.</string>
    <string name="emoca_inst4">There is also a button labeled “Go to Next Test” in the upper-right corner. Please press this button after giving your answer to a question.</string>
    <string name="emoca_inst5">If you have any questions about the operation of the tablet, please ask the researcher for help before continuing. If you are ready, please press \“Start Test\” button below.</string>
    <string name="file_name_label">Please provide a unqiue name for this test.</string>
    <string name="file_name_hint">eg. Mary\'s Test Results</string>
    <string name="no_tests">No tests found.</string>
    <string name="mark_button">Mark</string>
    <string name="title_activity_manager">Manager</string>
    <string name="action_settings">Settings</string>
    <string name="manager_table_export">Export</string>
    <string name="manager_table_rename">Rename</string>
    <string name="manager_table_delete">Delete</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Are you sure you want to delete</string>
    <string name="rename">Rename</string>
    <string name="row_empty">No data was found.</string>
    <string name="aboutButton">ABOUT eMoCa</string>
    <string name="title_activity_about">About</string>
    <string name="about_1">The Electronic Montreal Cognitive Assessment test, or eMoCA, was developed by researchers with support from Richard Ivey Business School at Western University in Ontario, Canada. It is based on work pioneered at McGill University.</string>
    <string name="about_2">eMoCA is designed for assessing a range of possible cognitive impairments that may indicate a loss of Brain Health, related to various disorders or injuries. The test should not be viewed as a substitute for a proper medical assessment, but your test results may be considered valuable when viewed by a qualified professional.</string>
    <string name="about_3">It is recommended that all people perform the eMoCA test in order to establish baselines of Brain Health early in life. Early detection of problems may lead to treatment and avoiding more serious issues relating to Brain Health.</string>
    <string name="about_4">Development Team:\nRobert D. Kent, Christopher Lorenz and Anne W. Snowdon</string>
    <string name="about_title">ABOUT eMoCA</string>
    <string name="default_title">eMoCA</string>
    <string name="default_dialog_message">Are you sure you want to exit?\nAll data for current survey will be deleted.</string>
    <string name="exit_survey">Exit survey</string>
    <string name="marking_title">MARK TEST</string>
    <string name="marking_p1">On this screen you will now mark your eMoCA test results (or have a friend or family member do it for you). All questions have one, or more, marking boxes – just press on these with your finger to record the score for the question. You can change your score at any time before exiting the marking screen.</string>
    <string name="marking_p2">Below you will see for each test question what the response was. Marking the drawing questions is straightforward. For the questions that recorded a voice response, you may listen to the actual response by pressing the Start button.</string>
    <string name="marking_p3">Test questions 1 to 3 involve a drawing of an image. Questions 4-10, and 12-35, involve a recording of the user’s voice response. Question 11 recorded the screen tapping pattern for the repeated letter \'A\'.</string>
    <string name="start_p1">Welcome to the eMoCA, which asks a number of questions to test Brain Health.</string>
    <string name="start_p2">When you begin you will enter a screen to test your voice recording and also drawing on the screen using your fingernail. Following this the test will begin. The Tablet will speak instructions to you and you have the option of hearing them once again by pressing the \"Repeat Instructions\" button with your finger.</string>
    <string name="start_p3">The first three questions will ask you to draw an object onto the tablet. The next questions will ask you to select an answer, either by pressing the options on the screen, tapping on the screen or speaking a response directly at the tablet.</string>
    <string name="start_p4">When you have finished a test question it is important that you press \"Next Test Question\" button with your finger to get to the next test question.</string>
    <string name="start_p5">Please press the \"Start Button\" below with your finger to get started.</string>
    <string name="start_your_name">Your Name</string>
    <string name="start_your_location">Your Location</string>
    <string name="end_p1">You have now completed the eMoCA test, which provides a score that assesses a person\'s memory and thinking.</string>
    <string name="end_p2">A person\'s score depends on many things. A score less than 25 may indicate changes in your memory or thinking. Please make an appointment to discuss any concerns you may have with your family physician.</string>
    <string name="end_p3">Early treatment of risk factors (such as high blood pressure) that affect memory or thinking, can support and maintain brain health.</string>
    <string name="end_p4">Healthy lifestyle behaviors such as diet and exercise are important for supporting brain health.</string>
    <string name="question">Question</string>
    <string name="test_end">End of Test</string>
    <string name="instructions">Instructions</string>
</resources>
