<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <include layout="@layout/header" />

        <include layout="@layout/title" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                style="@style/content_margins">
            <TextView
                    style="@style/paragraph"
                    android:text="@string/about_1">
            </TextView>
            <TextView
                    style="@style/paragraph"
                    android:text="@string/about_2">
            </TextView>
            <TextView
                    style="@style/paragraph"
                    android:text="@string/about_3">
            </TextView>
            <TextView
                    style="@style/paragraph"
                    android:text="@string/about_4">
            </TextView>
            <ImageView
                    android:src="@drawable/ivey_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
