<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@drawable/background_gradient">

        <include layout="@layout/header" />

        <include layout="@layout/title" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                style="@style/content_margins">
            <TextView
                    style="@style/paragraph"
                    android:text="@string/marking_p1">
            </TextView>
            <TextView
                    style="@style/paragraph"
                    android:text="@string/marking_p2">
            </TextView>
            <TextView
                    style="@style/paragraph"
                    android:text="@string/marking_p3">
            </TextView>
            <ImageView
                    android:layout_gravity="center"
                    style="@style/start_button"
                    android:id="@+id/startMarking"
                    android:onClick="startMarking"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
