<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/background_gradient">


    <include layout="@layout/header" />

    <include layout="@layout/title" />

    <RelativeLayout
            style="@style/content_margins"
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_alignParentTop="true"
                android:id="@+id/button1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/replay"
                android:layout_alignParentLeft="true"
                android:onClick="replayInst"
                android:background="@drawable/small_button"
            />
        <Button
                android:layout_alignParentTop="true"
                android:id="@+id/button2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/gotonext"
                android:onClick="nextTest"
                android:background="@drawable/small_button"
            />
        <Button
                android:id="@+id/button3"
                android:layout_centerInParent="true"
                android:layout_width="650dp"
                android:layout_height="100dp"
                android:text="@string/tap"
                android:onClick="addTap"
                android:background="@drawable/small_button"
            />
    </RelativeLayout>
</LinearLayout>
