<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/background_gradient">

    <include layout="@layout/header" />

    <include layout="@layout/title" />

    <LinearLayout
            style="@style/content_margins"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
                style="@style/content_margins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right"
                >
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:text="@string/clear"
                    android:onClick="eraseCanvas"
                    android:background="@drawable/small_button"
                />
            <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/button1"
                    android:onClick="startTest"
                    android:text="@string/next_label"
                    android:background="@drawable/small_button"
                />
        </LinearLayout>
        <LinearLayout
                style="@style/content_margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

            <TextView
                    android:text="@string/emoca_inst2"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:id="@+id/textView2"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_weight=".5"
                />

            <view class="com.android.main.CanvasDrawing"
                    android:layout_gravity="center"
                    android:id="@+id/cd"
                    android:layout_height="200dip"
                    android:layout_width="fill_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".5"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
