<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <include layout="@layout/header" />

        <include layout="@layout/title" />

        <LinearLayout
                style="@style/content_margins"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/button1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/next_label"
                    android:onClick="startTest"
                    android:background="@drawable/small_button"
                    android:layout_gravity="right"
                />

            <TextView
                    android:text="@string/emoca_inst1"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:id="@+id/textView2"
                    android:layout_below="@+id/button1"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                />
            <TextView
                    android:text="@string/when_ready"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="19sp"
                    android:id="@+id/readyText"
                    android:layout_gravity="center"
                />
            <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"
                    android:layout_centerHorizontal="false"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="45dp"
                    android:src="@drawable/audio0"
                    android:layout_gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
